--- a/pages/login.html
+++ b/pages/login.html
@@ -1,4 +1,5 @@
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -17,12 +18,18 @@
 	<div class="row" style="height:2em;">
 	</div>
 
+	<!-- <div class="row">
+	    <div class="col-md-12" style="min-width:600px">
+  			<h4 id="pic_name" class="text-center">Вот только давайте сразу договоримся, вы нам логин на английском, мы вам сайт. Вин-вин. А то будет 500 ошибка. Оно вам надо?</h4>
+  		</div>
+	</div> -->
+
 	<div class="row">
 	    <div class="col-md-12" style="min-width:400px">
   			<form class="center-block" id="login-form" style="max-width:300px">
 			  <div class="form-group">
 			    <label for="login">Имя:</label>
-			    <input type="text" class="form-control" id="login" name="login" value="Енот искусствовед" placeholder="">
+			    <input type="text" class="form-control" id="login" name="login" value="Анонимный искусствовед" placeholder="">
 			  </div>
 			  <button type="submit" class="btn btn-default">Картины</button>
 			</form>
